Different behaviour of custom hotkey #41740

Closed
opened 2014-09-07 12:35:17 +02:00 by Cenek Strichel · 8 comments

System Information
W8.1 64b, GF 250

Blender Version
4776d80

Exact steps for others to reproduce the error

  1. change Input hotkey > Animation > Change frame, attach to middle click
  2. all is working good in DopeSheet and Timeline
  3. Change same setting for Graph Editor > Set Cursor to middle click
  4. When you click middle click to Graph editor, cursor is snapped to mouse, until you click left or right mouse. With Left or Right mouse it is working well. But not with middle click.

Maybe it is not bug, but limitiation of some hardcoded feature. But you can not use middle button for fast setting cursor, because you have to confirm it with some click.

**System Information** W8.1 64b, GF 250 **Blender Version** 4776d80 **Exact steps for others to reproduce the error** 1) change Input hotkey > Animation > Change frame, attach to middle click 2) all is working good in DopeSheet and Timeline 3) Change same setting for Graph Editor > Set Cursor to middle click 4) When you click middle click to Graph editor, cursor is snapped to mouse, until you click left or right mouse. With Left or Right mouse it is working well. But not with middle click. Maybe it is not bug, but limitiation of some hardcoded feature. But you can not use middle button for fast setting cursor, because you have to confirm it with some click.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Bastien Montagne self-assigned this 2014-09-07 14:12:13 +02:00

Iirc, fixed a similar issue some weeks ago, will have a look…

Iirc, fixed a similar issue some weeks ago, will have a look…
Author

There is also another strange behaviour (I dont want create new bug report, because it is maybe also limitation)

translate.png

I also see that exactly same command in hotkeys, do different thing. For example radial control in image paint in 2.71. Now with physic paint tools it is ok. Some hardcoded?

There is also another strange behaviour (I dont want create new bug report, because it is maybe also limitation) ![translate.png](https://archive.blender.org/developer/F109316/translate.png) I also see that exactly same command in hotkeys, do different thing. For example radial control in image paint in 2.71. Now with physic paint tools it is ok. Some hardcoded?

This issue was referenced by 65da19b0cd

This issue was referenced by 65da19b0cde2f77ee0b89528c130b5bab606ec52

Fixed org bug (as a temp solution, real fix would be to use modal keymaps here!).

Please report other stuff as a new bug (one bug, one report), would be nice to attach you exported keymap to it, too!

Fixed org bug (as a temp solution, real fix would be to use modal keymaps here!). Please report other stuff as a new bug (one bug, one report), would be nice to attach you exported keymap to it, too!

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 65da19b0cd.

Closed by commit 65da19b0cd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41740
No description provided.